--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"
     />
+    <link rel="shortcut icon" href="./asset/sahir_fdM_icon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./asset/style.css" />
   </head>
