--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
           <a href="https://wa.me/+919318374921"
             ><img class="socialIcons" src="./asset/whatsapp.png" alt=""
           /></a>
-          <a href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
+          <a target="_blank" href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
             ><img class="socialIcons" src="./asset/linkedin.png" alt=""
           /></a>
-          <a href="https://twitter.com/sahirskd321"
+          <a target="_blank" href="https://twitter.com/sahirskd321"
             ><img class="socialIcons" src="./asset/twitter.png" alt=""
           /></a>
-          <a href="https://www.instagram.com/sahirskd/"
+          <a target="_blank" href="https://www.instagram.com/sahirskd/"
             ><img class="socialIcons" src="./asset/instagram.png" alt=""
           /></a>
-          <a href="https://github.com/sahirskd"
+          <a target="_blank" href="https://github.com/sahirskd"
             ><img class="socialIcons" src="./asset/github (1).png" alt=""
           /></a>
 
