--- a/index.html
+++ b/index.html
@@ -8,7 +8,175 @@
     />
     <link rel="shortcut icon" href="./asset/sahir_fdM_icon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./asset/style.css" />
+<!--     <link rel="stylesheet" href="./asset/style.css" /> -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,200&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  color: #f2f2f2;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 1px;
+
+  /* overflow-x: hidden; */
+  /* color: white; */
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .container {
+    display: flex !important;
+    flex-direction: column;
+    padding: 2rem 1rem !important;
+  }
+  .Position {
+    margin-bottom: 1rem;
+    display: block;
+    width: 100% !important;
+    padding: 0px !important;
+  }
+
+  .skillIcon {
+    margin: 0px !important;
+  }
+
+  .projects {
+    flex-direction: column !important;
+  }
+  .card2 {
+    margin: 2rem 0rem 0rem 0rem !important;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .btn {
+    width: 100%;
+  }
+}
+
+body {
+  background-color: #252525;
+}
+.container {
+  display: flex;
+  padding: 3rem 2.9rem;
+}
+.rounded-circle {
+  width: 10rem;
+  border-radius: 50%;
+}
+
+.Box {
+  border-radius: 10px;
+  padding: 32px;
+  background-color: #333333;
+  box-shadow: 0px 20px 40px rgba(30, 30, 30, 0.1);
+}
+
+.Position {
+  padding: 0rem 0.6rem;
+}
+
+.firstContianer {
+  width: 35%;
+}
+
+.secondContainer {
+  width: 65%;
+}
+
+.heading {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 4rem;
+  color: #f8835b;
+  margin-bottom: -10px;
+}
+
+.subHead {
+  font-size: 16px;
+  margin: 30px 0px 6px 0px;
+}
+
+.para {
+  font-size: 12px;
+  margin: 1rem 0rem;
+  line-height: 24px;
+}
+
+.subHead1 {
+  font-size: 20px;
+  color: #f8835b;
+  margin: 1.5rem 0rem;
+}
+.socialIcons {
+  margin: 13px 8px 5px 0px;
+  padding: 6px;
+  border-radius: 5px;
+  transition: background-color 0.15s ease-in-out;
+}
+.socialIcons:hover {
+  background-color: #f8835b;
+}
+.btn {
+  cursor: pointer;
+  padding: 12px 21px 12px 21px;
+  background-color: #f8835b;
+  border-radius: 5px;
+  border: 1px solid #f8835b;
+  font-size: 14px;
+  font-weight: 700;
+  margin-right: 8px;
+  /* width: 100%; */
+  margin-top: 5px;
+  transition: background-color 0.15s ease-in-out;
+}
+.btn:hover {
+  background-color: transparent;
+}
+
+.iconSet {
+  text-align: center !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  margin: 16px 0px;
+  font-size: 16px;
+}
+.skillIcon {
+  margin-right: 20rem;
+}
+.skillIcon img {
+  margin-right: 5px;
+}
+.projects {
+  display: flex;
+}
+
+.card img {
+  width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.card2 {
+  margin: 0rem 0rem 2rem 2rem;
+}
+
+.card-heading {
+  display: flex;
+  justify-content: space-between;
+}
+.show-more {
+  display: flex;
+  justify-content: center;
+}
+
+    </style>
   </head>
   <body>
     <div class="container">
