--- a/index.html
+++ b/index.html
@@ -186,10 +186,7 @@ body {
           <h1 class="heading">Sahir khan</h1>
           <h3 style="margin-top: 0" class="subHead">Web Developer</h3>
           <p class="para">
-            I seek a job as a web developer in a web designing company where I
-            can use my skills and experience in web development. I wish to
-            contribute towards the organizational goals of the company through
-            my technical skills, hard work, and creativity.
+           A self-taught web developer, and has expertise in HTML, CSS, JavaScript, Bootstrap, Gatsby and other frameworks. Nowadays learning and implementing the technology of PWA, TWA to convert the websites into Native cross platform mobile apps.
           </p>
           <h2 class="subHead1">Contact</h2>
           <h3 class="subHead">Address:</h3>
