--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ body {
           <h2 class="subHead1">Contact</h2>
           <h3 class="subHead">Address:</h3>
 
-          <p>WZ 167 Main Market Rani Bagh, Pitampura New Delhi 110034, India</p>
+          <p>WZ 157, Sri Nagar Pitampura New Delhi 110034, India</p>
           <h3 class="subHead">Phone Number:</h3>
           <p>+91 9318374921</p>
           <a href="https://wa.me/+919318374921"
