--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@ body {
           <h3 class="subHead">Phone Number:</h3>
           <p>+91 9318374921</p>
           <a href="https://wa.me/+919318374921"
-            ><img class="socialIcons" src="./asset/whatsapp.png" alt=""
+            ><img class="socialIcons" src="./asset/icons/whatsapp.png" alt=""
           /></a>
           <a target="_blank" href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
-            ><img class="socialIcons" src="./asset/linkedin.png" alt=""
+            ><img class="socialIcons" src="./asset/icons/linkedin.png" alt=""
           /></a>
           <a target="_blank" href="https://twitter.com/sahirskd321"
-            ><img class="socialIcons" src="./asset/twitter.png" alt=""
+            ><img class="socialIcons" src="./asset/icons/twitter.png" alt=""
           /></a>
           <a target="_blank" href="https://www.instagram.com/sahirskd/"
-            ><img class="socialIcons" src="./asset/instagram.png" alt=""
+            ><img class="socialIcons" src="./asset/icons/instagram.png" alt=""
           /></a>
           <a target="_blank" href="https://github.com/sahirskd"
-            ><img class="socialIcons" src="./asset/github (1).png" alt=""
+            ><img class="socialIcons" src="./asset/icons/github (1).png" alt=""
           /></a>
 
           <div class="buttons">
