--- a/asset/resume.html
+++ b/asset/resume.html
@@ -1,1 +1,306 @@
-<!DOCTYPE html><html><head><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><style>body{font-family:'Roboto',sans-serif;background-color:white;height:900px;width:750px;margin:auto}.name{size:130px;color:black}#sahir{text-align:center}.profile{margin-top:-25px;letter-spacing:1.5px}.contact{display:flex;justify-content:space-between;margin-top:-10px;margin-left:10px;margin-right:10px}h3.summaryHeading{font-size:18px}.summary{margin-top:-10px}hr{border:0.5px solid black;margin-top:-20px}.description{margin-left:10px;margin-top:-10px}ul.list{display:flex}li span{position:relative;left:-7px}.items{margin-right:15px}.siteName{display:flex;justify-content:space-between;margin-top:-21px}.webDescription{margin-top:7px}.firstD{margin-top:-18px}#madeby{color:grey;margin-left:70%}</style></head><body><div class="Section1"> <header id="sahir"><h1 class="name">Sahir khan</h1><p class="profile">WEB DEVELOPER</p><div class="contact"><div class="cDetails"><a href="tel:+919318374921">+91 9318374921</a></div><div class="cDetails">|</div><div class="cDetails"><a href="mailto:sahirskd@gmail.com">sahirskd@gmail.com</a></div><div class="cDetails">|</div><div class="cDetails">Rani Bagh, Delhi</div></div> </header><div class="summary"><h3 class="summaryHeading">SUMMARY</h3><hr class="line"><div class="description"><p>I seek a job as a web developer in a web designing company where I can use my skills and experience in web development. I wish to contribute towards the organizational goals of the company through my technical skills, hard work, and creativity.</p></div></div><div class="summary"><h3 class="summaryHeading">KEY SKILLS</h3><hr class="line"><div class="description"><ul class="list"><li class="items"><span>HTML</span></li><li class="items"><span>CSS</span></li><li class="items"><span>JavaScript</span></li><li class="items"><span>WordPress</span></li><li class="items"><span>Bootstrap</span></li><li class="items"><span>React.js</span></li><li class="items"><span>Figma</span></li><li class="items"><span>SSG</span></li><li class="items"><span>PWA</span></li><li><span>VS Code</span></li></ul></div></div><div class="summary"><h3 class="summaryHeading">PROJECTS</h3><hr class="line"><div class="siteName"><h4>Star Internationals</h4><a href="https://starinternationals.in/"><h5>Starinternationals.in</h5></a></div><div class="description"><ul class="firstD"><li>Developed the website and online chatbot system using WordPress and plugins, which helped them to 2X their revenue.</li><li class="webDescription">Implemented call and message button below every product which drastically increased their sales.</li><li class="webDescription">Used SSL Certificate, Meta tags and Yoast SEO plugin to improve performance and SEO.</li></ul></div><div class="siteName"><h4>NoteApp</h4><a href="https://sahirskd1.netlify.app/index.html"><h5>NoteApp</h5></a></div><div class="description"><ul class="firstD"><li>Developed the website using Paper CSS framework and VanillaJS to give real pencil notes experience to the users.</li><li class="webDescription">Implemented PWA technology and added a custom install button on the app which helped to 3x the downloads of the apps.</li><li class="webDescription">Create, delete and manage your unlimited instant notes. Notes are not sent to the server, hence notes are secured. Mobile responsive and light weight (only 100kbs).</li></ul></div><div class="siteName"><h4>Vyapar</h4><a href="https://vyapar.netlify.app/"><h5>Vyapar</h5></a></div><div class="description"><ul class="firstD"><li>Developed the digital marketing company website using Bootstrap CSS framework and jQuery.</li><li class="webDescription">Made it installable on every device using PWA technology and accessible even when the user is offline</li></ul></div></div><div class="summary"><h3 class="summaryHeading">INTERNSHIP</h3><hr class="line"><div class="siteName"><h4>NGO Conferences Expo</h4><a href="https://web.archive.org/web/20200113104209/http://ngoconferencesexpo.com/"><h5>Ngoconferencesexpo.com</h5></a></div><div class="description"><ul class="firstD"><li>Developed their website using WordPress and plugins created designs for their website.</li><li class="webDescription">Created facebook campaigns and SEO for the website using Google search console, Yoast SEO and other analytics tools.</li><li class="webDescription">Worked in the team and got an exposure to the corporate world and learned a lot.</li></ul></div></div><div class="summary"><h3 class="summaryHeading">EDUCATION</h3><hr class="line"><div class="description"><ul><li>Passed 10 with 89% from CBSE board</li></ul></div></div><div class="summary"><h3 class="summaryHeading">REFERENCE</h3><hr class="line"><div class="description"><ul class="list"><li class="items"><a href="https://github.com/sahirskd"><span>GitHub</span></a></li><li class="items"><a href="https://www.instagram.com/sahirskd/"><span>Instagram</span></a></li><li class="items"><a href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"><span>LinkedIn</span></a></li><li class="items"><a href="https://linktr.ee/sahirskd"><span>LinkTree</span></a></li></ul></div> <span id="madeby">MADE BY SAHIR USING HTML</span></div></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        background-color: white;
+        height: 900px;
+        width: 750px;
+        /* to centre page on screen*/
+        margin: auto;
+      }
+      .name {
+        size: 130px;
+        color: black;
+      }
+      #sahir {
+        text-align: center;
+      }
+      .profile {
+        margin-top: -25px;
+        letter-spacing: 1.5px;
+      }
+
+      .contact {
+        display: flex;
+        justify-content: space-between;
+        margin-top: -10px;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+      h3.summaryHeading {
+        font-size: 18px;
+        margin-top: 22px;
+      }
+
+      .summary {
+        margin-top: -10px;
+      }
+
+      hr {
+        border: 0.5px solid black;
+        margin-top: -20px;
+      }
+      .description {
+        margin-left: 10px;
+        margin-top: -10px;
+      }
+
+      ul.list {
+        display: flex;
+      }
+      li span {
+        position: relative;
+        left: -7px;
+      }
+      .items {
+        margin-right: 15px;
+      }
+
+      .siteName {
+        display: flex;
+        justify-content: space-between;
+        margin-top: -21px;
+      }
+
+      .webDescription {
+        margin-top: 7px;
+      }
+
+      .firstD {
+        margin-top: -18px;
+      }
+
+      #madeby {
+        color: grey;
+        margin-left: 70%;
+      }
+      a {
+        color: blue;
+      }
+      a:visited {
+        color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="Section1">
+      <header id="sahir">
+        <h1 class="name">Sahir khan</h1>
+        <p class="profile">WEB DEVELOPER</p>
+        <div class="contact">
+          <div class="cDetails">
+            <a href="tel:+919318374921">+91 9318374921</a>
+          </div>
+          <div class="cDetails">|</div>
+          <div class="cDetails">
+            <a href="https://sahirskd.netlify.app">Website</a>
+          </div>
+          <div class="cDetails">|</div>
+          <div class="cDetails">
+            <a href="mailto:sahirskd@gmail.com">sahirskd@gmail.com</a>
+          </div>
+          <div class="cDetails">|</div>
+          <div class="cDetails">Rani Bagh, Delhi</div>
+        </div>
+      </header>
+
+      <div class="summary">
+        <h3 class="summaryHeading">SUMMARY</h3>
+        <hr class="line" />
+        <div class="description">
+          <p>
+            I have experience in developing functional web application using
+            JavaScript/jquery, XML, HTML, CSS. I wish to join an organisation
+            where I can use my coding and organizational skills to grow the
+            company.
+          </p>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">KEY SKILLS</h3>
+        <hr class="line" />
+        <div class="description">
+          <ul class="list">
+            <li class="items"><span>HTML</span></li>
+            <li class="items"><span>CSS</span></li>
+            <li class="items"><span>JavaScript</span></li>
+            <li class="items"><span>WordPress</span></li>
+            <li class="items"><span>Bootstrap</span></li>
+            <li class="items"><span>React.js</span></li>
+            <li class="items"><span>Figma</span></li>
+            <li class="items"><span>SSG</span></li>
+            <li class="items"><span>PWA</span></li>
+            <li><span>VS Code</span></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">EXPERIENCE</h3>
+        <hr class="line" />
+        <div class="siteName">
+          <h4>NIIT</h4>
+          <a href="https://www.niit.com/"><h5>NIIT.com</h5></a>
+        </div>
+        <div class="description">
+          <ul class="firstD">
+            <li>
+              Worked in a team to create an <b> SPA e-learning</b>
+              platform for NIIT Ltd.
+            </li>
+            <li class="webDescription">
+              We used the technologies like jquery, XML, shell, and HTML and CSS
+              to <b>dynamically</b> fetch the content and provide a good user
+              experience to the learner as well as the maitainer of the code.
+            </li>
+            <li class="webDescription">
+              Collaborated with design team, operation team on a daily basis to
+              build the platform, implemented the feedbacks given by other
+              teams.
+            </li>
+          </ul>
+        </div>
+        <div class="siteName">
+          <h4>NGO Conferences Expo</h4>
+          <a
+            href="https://web.archive.org/web/20200113104209/http://ngoconferencesexpo.com/"
+            ><h5>Ngoconferencesexpo.com</h5></a
+          >
+        </div>
+        <div class="description">
+          <ul class="firstD">
+            <li>
+              Developed their website using <b>WordPress</b> and plugins created
+              designs for their website.
+            </li>
+            <li class="webDescription">
+              Created facebook campaigns and <b>SEO</b> for the website using
+              Google search console, Yoast SEO and other analytics tools.
+            </li>
+            <li class="webDescription">
+              Worked in the team and got an exposure to the corporate world and
+              learned a lot.
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">PROJECTS</h3>
+        <hr class="line" />
+        <div class="siteName">
+          <h4>Star Internationals</h4>
+          <a href="https://starinternationals.in/"
+            ><h5>Starinternationals.in</h5></a
+          >
+        </div>
+        <div class="description">
+          <ul class="firstD">
+            <li>
+              Developed the website and <b>online chatbot</b> system using
+              WordPress and plugins, which helped them to 2X their revenue.
+            </li>
+            <li class="webDescription">
+              Implemented call and message button below every product which
+              drastically increased their sales.
+            </li>
+            <li class="webDescription">
+              Integrated SSL Certificate and made their site
+              <b>https</b> enabled, Meta tags and Yoast SEO plugin to improve
+              performance and SEO.
+            </li>
+          </ul>
+        </div>
+
+        <div class="siteName">
+          <h4>NoteApp</h4>
+          <a href="https://sahirskd1.netlify.app/index.html"
+            ><h5>NoteApp</h5></a
+          >
+        </div>
+        <div class="description">
+          <ul class="firstD">
+            <li>
+              Developed the website using <b>Paper CSS framework</b> and
+              VanillaJS to give real pencil notes experience to the users.
+            </li>
+            <li class="webDescription">
+              Implemented PWA technology and added a
+              <b>custom install</b> button on the app which helped to 3x the
+              downloads of the apps.
+            </li>
+            <li class="webDescription">
+              Create, delete and manage your unlimited instant notes. Notes are
+              not sent to the server, hence notes are secured.
+              <b>Mobile responsive</b>
+              and light weight (only 100kbs).
+            </li>
+          </ul>
+        </div>
+
+        <div class="siteName">
+          <h4>Vyapar</h4>
+          <a href="https://vyapar.netlify.app/"><h5>Vyapar</h5></a>
+        </div>
+        <div class="description">
+          <ul class="firstD">
+            <li>
+              Developed the digital marketing company website using
+              <b>Bootstrap CSS</b> framework and jQuery.
+            </li>
+            <li class="webDescription">
+              Made it <b>installable</b> on every device using PWA technology
+              and accessible even when the user is offline
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">EDUCATION</h3>
+        <hr class="line" />
+        <div class="description">
+          <ul>
+            <li>Passed 10 with 89% from CBSE board</li>
+            <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">REFERENCE</h3>
+        <hr class="line" />
+        <div class="description">
+          <ul class="list">
+            <li class="items">
+              <a href="https://sahirskd.netlify.app"><span>My Website</span></a>
+            </li>
+            <li class="items">
+              <a href="https://github.com/sahirskd"><span>GitHub</span></a>
+            </li>
+
+            <li class="items">
+              <a href="https://www.instagram.com/sahirskd/"
+                ><span>Instagram</span></a
+              >
+            </li>
+            <li class="items">
+              <a href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
+                ><span>LinkedIn</span></a
+              >
+            </li>
+          </ul>
+        </div>
+        <span id="madeby">MADE BY SAHIR USING HTML</span>
+      </div>
+    </div>
+  </body>
+</html>
