--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -104,7 +105,7 @@ body {
 }
 
 .para {
-  font-size: 12px;
+  font-size: 13px;
   margin: 1rem 0rem;
   line-height: 24px;
 }
@@ -227,51 +228,79 @@ body {
         <div class="secondBox Box">
           <h2 class="subHead1">Experiences</h2>
           <span class="subHead"
-            ><b>Web Developer </b>| Jun 2020 - July 2020</span
+            ><b>NIIT </b>| Web Developer</span
           >
           <p class="para">
-            Developed the StarInternationals.in website and online chatbot
-            system using WordPress and plugins, which helped them to 2X their
-            revenue.Implemented call and message button below every product
-            which drastically increased their sales.
+            Worked in a team to create an <b> SPA e-learning</b>
+              platform for NIIT Ltd.
+          </p>
+          <p class="para">
+            Collaborated with design team, operation team on a daily basis to
+              build the platform, implemented the feedbacks given by other
+              teams.
+          </p>
+          <p class="para">
+            We used the technologies like jquery, XML, shell, and HTML and CSS
+              to <b>dynamically</b> fetch the content and provide a good user
+              experience to the learner as well as the maitainer of the code.
           </p>
           <span class="subHead"
-            ><b>Web Designer </b>| July 2020 - July 2020</span
+            ><b>NGO Conferences Expo</b>| Web Developer</span
           >
           <p class="para">
-            Developed the website using Paper CSS framework and VanillaJS to
-            give real pencil notes experience to the users. Implemented PWA
-            technology and added a custom install button on the app which helped
-            to 3x the downloads of the apps.
+            Developed their website using <b>WordPress</b> and plugins created
+            designs for their website.
+          </p>
+          <p class="para">
+            Created facebook campaigns and <b>SEO</b> for the website using
+              Google search console, Yoast SEO and other analytics tools.
+          </p>
+          <p class="para">
+            Worked in the team and got an exposure to the corporate world and
+              learned a lot.
           </p>
           <span class="subHead"
-            ><b>Web Developer </b>| Aug 2020 - Sep 2020</span
+            ><b>Star Internationals </b>| Freelance Project</span
           >
           <p class="para">
-            Developed the digital marketing company website using Bootstrap CSS
-            framework and jQuery. Made it installable on every device using PWA
-            technology and accessible even when the user is offline.
+            Developed the website and <b>online chatbot</b> system using
+              WordPress and plugins, which helped them to 2X their revenue.
+          </p>
+          <p class="para">
+            Implemented call and message button below every product which
+            drastically increased their sales.
+          </p>
+          <p class="para">
+            Integrated SSL Certificate and made their site
+            <b>https</b> enabled, Meta tags and Yoast SEO plugin to improve
+            performance and SEO.
           </p>
           <span class="subHead"
-            ><b>Web Developer (Intern) </b>| July 2019 - Jan 2020</span
+            ><b>Vyapar </b>| Academics Project</span
           >
           <p class="para">
-            Developed their NGO Conferences website using WordPress and plugins
-            created designs for their website. Created facebook campaigns and
-            SEO for the website using Google search console, Yoast SEO and other
-            analytics tools. Worked in the team and got an exposure to the
-            corporate world and learned a lot.
+            Developed the digital marketing company website using
+              <b>Bootstrap CSS</b> framework and jQuery.
+          </p>
+          <p class="para">
+            Made it <b>installable</b> on every device using PWA technology
+              and accessible even when the user is offline, with offline fallback.
           </p>
           <h2 class="subHead1">Education</h2>
           <span class="subHead"
-            ><b>Intermediate (12th) </b>| April 2020 - March 2021</span
+            ><b>BCA </b>| (Persuing)</span
           >
           <p class="para">
-            Passed 12th class with commerce stream and persued computer
-            application certificate from the school.
           </p>
           <span class="subHead"
-            ><b>High School (10th) </b>| April 2019 - March 2020</span
+            ><b>Intermediate (12th) </b></span
+          >
+          <p class="para">
+            Passed 12th class with commerce stream and persuit computer
+            application certificate with 1st division in the school.
+          </p>
+          <span class="subHead"
+            ><b>High School (10th) </b>| With 2nd Division</span
           >
           <p class="para">
             Passed 10th class with 2nd position in the school and percentage
@@ -399,7 +428,7 @@ body {
               </p>
             </div>
           </div>
-          <div class="show-more">
+          <!-- <div class="show-more">
             <a href="./asset/resume.html"
               ><button
                 style="background-color: transparent; padding: 12px 41px"
@@ -408,7 +437,7 @@ body {
                 VIEW MORE
               </button></a
             >
-          </div>
+          </div> -->
           <!-- div for the projects section -->
         </div>
       </div>
