--- a/asset/resume.html
+++ b/asset/resume.html
@@ -299,7 +299,7 @@
             </li>
           </ul>
         </div>
-        <span id="madeby">MADE BY SAHIR USING HTML</span>
+<!--         <span id="madeby">MADE BY SAHIR USING HTML</span> -->
       </div>
     </div>
   </body>
