--- a/asset/resume.html
+++ b/asset/resume.html
@@ -153,18 +153,13 @@
         <div class="description">
           <ul class="firstD">
             <li>
-              Worked in a team to create an <b> SPA e-learning</b>
-              platform for NIIT Ltd.
+              Worked in a team to create a SPA e-learning platform for NIIT Ltd.
             </li>
             <li class="webDescription">
-              We used the technologies like jquery, XML, shell, and HTML and CSS
-              to <b>dynamically</b> fetch the content and provide a good user
-              experience to the learner as well as the maitainer of the code.
+              We used the technologies like jquery, XML, shell, and HTML, and CSS to dynamically fetch the content and provide a good user experience to the learner, and making the web application dynamic so that the application can be manipulated using XML.
             </li>
             <li class="webDescription">
-              Collaborated with design team, operation team on a daily basis to
-              build the platform, implemented the feedbacks given by other
-              teams.
+              Collaborated with the design team, operation team daily to build the platform, implemented the feedbacks given by other teams.
             </li>
           </ul>
         </div>
@@ -182,11 +177,11 @@
               designs for their website.
             </li>
             <li class="webDescription">
-              Created facebook campaigns and <b>SEO</b> for the website using
+              Created facebook campaigns and, <b>SEO</b> for the website using
               Google search console, Yoast SEO and other analytics tools.
             </li>
             <li class="webDescription">
-              Worked in the team and got an exposure to the corporate world and
+              Worked in the team and got exposure to the corporate world and
               learned a lot.
             </li>
           </ul>
