--- a/asset/resume.html
+++ b/asset/resume.html
@@ -117,7 +117,7 @@
         <div class="description">
           <p>
             I have experience in developing functional web application using
-            JavaScript/jquery, XML, HTML, CSS. I wish to join an organisation
+            JavaScript/jquery, XML, HTML, CSS. I wish to join an organization
             where I can use my coding and organizational skills to grow the
             company.
           </p>
@@ -153,7 +153,7 @@
         <div class="description">
           <ul class="firstD">
             <li>
-              Worked in a team to create a SPA e-learning platform for NIIT Ltd.
+              Worked in a team as a web developer to create a SPA e-learning platform for NIIT Ltd.
             </li>
             <li class="webDescription">
               We used the technologies like jquery, XML, shell, and HTML, and CSS to dynamically fetch the content and provide a good user experience to the learner, and making the web application dynamic so that the application can be manipulated using XML.
