--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Portfolio</title>
+    <title>Sahir | Portfolio</title>
     <meta
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"
     />
+    <meta name="title" content="Sahir khan | Web Developer">
+    <meta name="description" content="I have experience in developing functional web application using JavaScript/jquery, XML, HTML, CSS. I wish to grow other businesses through my coding and organizational skills.">
     <link rel="shortcut icon" href="./asset/sahir_fdM_icon.ico" type="image/x-icon">
 
 <!--     <link rel="stylesheet" href="./asset/style.css" /> -->
@@ -70,6 +72,7 @@ body {
 .rounded-circle {
   width: 10rem;
   border-radius: 50%;
+  border: 3px solid white;
 }
 
 .Box {
@@ -195,20 +198,20 @@ body {
           <p>WZ 157, Sri Nagar Pitampura New Delhi 110034, India</p>
           <h3 class="subHead">Phone Number:</h3>
           <p>+91 9318374921</p>
-          <a href="https://wa.me/+919318374921"
-            ><img class="socialIcons" src="./asset/icons/whatsapp.png" alt=""
+          <a rel="noopener" href="https://wa.me/+919318374921"
+            ><img class="socialIcons" src="./asset/icons/whatsapp.png" alt="whatsapp"
           /></a>
-          <a target="_blank" href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
-            ><img class="socialIcons" src="./asset/icons/linkedin.png" alt=""
+          <a rel="noopener" target="_blank" href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
+            ><img class="socialIcons" src="./asset/icons/linkedin.png" alt="linkedin"
           /></a>
-          <a target="_blank" href="https://twitter.com/sahirskd321"
-            ><img class="socialIcons" src="./asset/icons/twitter.png" alt=""
+          <a rel="noopener" target="_blank" href="https://twitter.com/sahirskd321"
+            ><img class="socialIcons" src="./asset/icons/twitter.png" alt="twitter"
           /></a>
-          <a target="_blank" href="https://www.instagram.com/sahirskd/"
-            ><img class="socialIcons" src="./asset/icons/instagram.png" alt=""
+          <a rel="noopener" target="_blank" href="https://www.instagram.com/sahirskd/"
+            ><img class="socialIcons" src="./asset/icons/instagram.png" alt="instagram"
           /></a>
-          <a target="_blank" href="https://github.com/sahirskd"
-            ><img class="socialIcons" src="./asset/icons/github (1).png" alt=""
+          <a rel="noopener" target="_blank" href="https://github.com/sahirskd"
+            ><img class="socialIcons" src="./asset/icons/github (1).png" alt="github"
           /></a>
 
           <div class="buttons">
