--- a/asset/resume.html
+++ b/asset/resume.html
@@ -106,8 +106,6 @@
           <div class="cDetails">
             <a href="mailto:sahirskd@gmail.com">sahirskd@gmail.com</a>
           </div>
-          <div class="cDetails">|</div>
-          <div class="cDetails">Rani Bagh, Delhi</div>
         </div>
       </header>
 
@@ -125,16 +123,29 @@
       </div>
 
       <div class="summary">
+        <h3 class="summaryHeading">Personal Details</h3>
+        <hr class="line" />
+        <div class="description">
+          <ul>
+            <li><b>Date of Birth:</b> 10th Aug 2003</li>
+            <li><b>Father's Name:</b> Md. Israr khan</li>
+            <li>
+              <b>Address:</b> WZ - 157, Rani Bagh, North-West Delhi, 110034
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
         <h3 class="summaryHeading">KEY SKILLS</h3>
         <hr class="line" />
         <div class="description">
           <ul class="list">
             <li class="items"><span>HTML</span></li>
             <li class="items"><span>CSS</span></li>
-            <li class="items"><span>JavaScript</span></li>
+            <li class="items"><span>JavaScript/jquery</span></li>
             <li class="items"><span>WordPress</span></li>
             <li class="items"><span>Bootstrap</span></li>
-            <li class="items"><span>React.js</span></li>
             <li class="items"><span>Figma</span></li>
             <li class="items"><span>SSG</span></li>
             <li class="items"><span>PWA</span></li>
@@ -153,13 +164,18 @@
         <div class="description">
           <ul class="firstD">
             <li>
-              Worked in a team as a web developer to create a SPA e-learning platform for NIIT Ltd.
+              Worked in a team as a web developer to create a SPA e-learning
+              platform for NIIT Ltd.
             </li>
             <li class="webDescription">
-              We used the technologies like jquery, XML, shell, and HTML, and CSS to dynamically fetch the content and provide a good user experience to the learner, and making the web application dynamic so that the application can be manipulated using XML.
+              We used the technologies like jquery, XML, shell, and HTML, and
+              CSS to dynamically fetch the content and provide a good user
+              experience to the learner, and making the web application dynamic
+              so that the application can be manipulated using XML.
             </li>
             <li class="webDescription">
-              Collaborated with the design team, operation team daily to build the platform, implemented the feedbacks given by other teams.
+              Collaborated with the design team, operation team daily to build
+              the platform, implemented the feedbacks given by other teams.
             </li>
           </ul>
         </div>
@@ -264,7 +280,9 @@
         <hr class="line" />
         <div class="description">
           <ul>
-            <li>Passed 10 with 89% from CBSE board</li>
+            <li>Persuing BCA from Indira Gandhi National Open University</li>
+            <li>Passed 12th from CBSE board</li>
+            <li>Passed 10th with 89% from CBSE board</li>
             <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
           </ul>
         </div>
@@ -294,7 +312,7 @@
             </li>
           </ul>
         </div>
-<!--         <span id="madeby">MADE BY SAHIR USING HTML</span> -->
+        <!--         <span id="madeby">MADE BY SAHIR USING HTML</span> -->
       </div>
     </div>
   </body>
