--- a/asset/resume.html
+++ b/asset/resume.html
@@ -282,7 +282,7 @@
           <ul>
             <li>Persuing BCA from Indira Gandhi National Open University</li>
             <li>Passed 12th from CBSE board</li>
-            <li>Passed 10th with 89% from CBSE board</li>
+            <li>Passed 10th with 2nd position in the school from CBSE board</li>
             <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
           </ul>
         </div>
