--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       .subHead {
         font-size: 16px;
         margin: 30px 0px 6px 0px;
+        text-decoration: underline;
       }
 
       .para {
@@ -364,7 +365,7 @@
         <div class="firstBox Box">
           <img alt="image" class="rounded-circle" src="./asset/sahir.jpg" />
           <h1 class="heading">Sahir khan</h1>
-          <h3 style="margin-top: 0" class="subHead">Web Developer</h3>
+          <h3 style="margin-top: 0; text-decoration: none;" class="subHead">Web Developer</h3>
           <p class="para">
             A self-taught web developer, and has expertise in HTML, CSS,
             JavaScript, Bootstrap, Gatsby and other frameworks. Nowadays
