--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <div class="card card2">
               <img src="./asset/Screenshot (13).png" alt="" />
               <div class="card-heading">
-                <h2>Star Internatoinals</h2>
+                <h2>Star Internationals</h2>
                 <a href="https://starinternationals.in/">Live Preview</a>
               </div>
               <p class="para">
