--- a/asset/resume.html
+++ b/asset/resume.html
@@ -100,7 +100,7 @@
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
-            <a href="https://sahirskd.netlify.app">Website</a>
+            <a href="https://sahirskd.netlify.app">https://sahirskd.netlify.app/</a>
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
@@ -294,7 +294,7 @@
         <div class="description">
           <ul class="list">
             <li class="items">
-              <a href="https://sahirskd.netlify.app"><span>My Website</span></a>
+              <a href="https://sahirskd.netlify.app"><span>sahirskd.netlify.app/</span></a>
             </li>
             <li class="items">
               <a href="https://github.com/sahirskd"><span>GitHub</span></a>
