--- a/asset/resume.html
+++ b/asset/resume.html
@@ -100,7 +100,7 @@
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
-            <a href="https://sahirskd.netlify.app">https://sahirskd.netlify.app/</a>
+            <a href="https://sahirskd.netlify.app">sahirskd.netlify.app</a>
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
