--- a/asset/resume.html
+++ b/asset/resume.html
@@ -9,11 +9,11 @@
       content="I have experience in developing functional web application using JavaScript/jquery, XML, HTML, CSS. I wish to grow other businesses through my coding and organizational skills."
     />
     <link rel="shortcut icon"
-      href="/sahir_fdM_icon.ico"
+      href="./sahir_fdM_icon.ico"
       type="image/x-icon"/>
     
     <link rel="apple-touch-icon"
-      href="/AppIcon.appiconset/180.png"
+      href="./AppIcon.appiconset/180.png"
       type="image/x-icon"/>
     
     <link rel="preconnect" href="https://fonts.gstatic.com" />
