--- a/asset/resume.html
+++ b/asset/resume.html
@@ -27,6 +27,7 @@
         width: 750px;
         /* to centre page on screen*/
         margin: auto;
+        padding:1.5rem;
       }
       .name {
         size: 130px;
