--- a/asset/resume.html
+++ b/asset/resume.html
@@ -33,6 +33,11 @@
         size: 130px;
         color: black;
       }
+      @media print{
+      body{
+        padding: 0px;
+        }
+      }
       #sahir {
         text-align: center;
       }
