--- a/index.html
+++ b/index.html
@@ -570,11 +570,11 @@
           </div>
           <div class="projects">
             <div class="card">
-              <img src="./asset/Screenshot (12).png" alt="" />
+              <img src="./asset/Screenshot (45).jpg" alt="" />
               <div class="card-heading">
-                <h2>BeFit</h2>
+                <h2>Landing Page</h2>
                 <a
-                  href="https://if6qh3stu0ojvrj82mpxow-on.drv.tw/www.sahirskd.cf/Befit/"
+                  href="https://sahirskd.github.io/Landing-page/index.html"
                   >Live Preview</a
                 >
               </div>
