--- a/index.html
+++ b/index.html
@@ -579,9 +579,8 @@
                 >
               </div>
               <p class="para">
-                Made BeFit website landing page for a health & fitness app using
-                bootstrap css and jquery, report shown a high conversion rate of
-                this landing page.
+                Converted this Landing Page into HTML, CSS, JavaScript from a PSD design, this landing page
+                is fully responsive on every device.
               </p>
             </div>
             <div class="card card2">
