--- a/asset/resume.html
+++ b/asset/resume.html
@@ -178,16 +178,16 @@
         <hr class="line" />
         <div class="siteName">
           <h4>NIIT</h4>
-          <a href="https://www.niit.com/"><h5>NIIT.com</h5></a>
+          <a href="https://www.e-solutionsinc.com/"><h5>E-Solutions</h5></a>
         </div>
         <div class="description">
           <ul class="firstD">
             <li>
-              Worked in a team as a web developer to create a SPA e-learning
+              Worked for it's client NIIT Ltd, in a team as a web developer to create a S.P.A e-learning
               platform for NIIT Ltd.
             </li>
             <li class="webDescription">
-              We used the technologies like jquery, XML, shell, and HTML, and
+              We used the technologies jquery, XML, shell, and HTML, and
               CSS to dynamically fetch the content and provide a good user
               experience to the learner, and making the web application dynamic
               so that the application can be manipulated using XML.
