--- a/asset/resume.html
+++ b/asset/resume.html
@@ -177,7 +177,7 @@
         <h3 class="summaryHeading">EXPERIENCE</h3>
         <hr class="line" />
         <div class="siteName">
-          <h4>NIIT</h4>
+          <h4>E-Solutions Ltd</h4>
           <a href="https://www.e-solutionsinc.com/"><h5>E-Solutions</h5></a>
         </div>
         <div class="description">
