--- a/asset/resume.html
+++ b/asset/resume.html
@@ -187,10 +187,10 @@
               platform for NIIT Ltd.
             </li>
             <li class="webDescription">
-              We used the technologies jquery, XML, shell, and HTML, and
-              CSS to dynamically fetch the content and provide a good user
+              We used the technologies <b>jQuery, XML, shell,</b> and <b>HTML, and
+              CSS</b> to dynamically fetch the content and provide a good user
               experience to the learner, and making the web application dynamic
-              so that the application can be manipulated using XML.
+              so that the application can be manipulated using <b>XML</b>.
             </li>
             <li class="webDescription">
               Collaborated with the design team, operation team daily to build
