--- a/asset/resume.html
+++ b/asset/resume.html
@@ -27,7 +27,7 @@
         width: 750px;
         /* to centre page on screen*/
         margin: auto;
-        padding:1.5rem;
+        padding:0rem;
       }
       .name {
         size: 130px;
@@ -101,10 +101,14 @@
         margin-left: 70%;
       }
       a {
-        color: blue;
+          color: blue;
       }
       a:visited {
         color: blue;
+    }
+    a:hover{
+        text-decoration: none;
+        color: rgb(0, 0, 209);
       }
     </style>
   </head>
@@ -115,15 +119,15 @@
         <p class="profile">WEB DEVELOPER</p>
         <div class="contact">
           <div class="cDetails">
-            <a href="tel:+919318374921">+91 9318374921</a>
+            <a target="blank" href="tel:+919318374921">+91 9318374921</a>
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
-            <a href="https://sahirskd.netlify.app">sahirskd.netlify.app</a>
+            <a target="blank" href="https://sahirskd.netlify.app">sahirskd.netlify.app</a>
           </div>
           <div class="cDetails">|</div>
           <div class="cDetails">
-            <a href="mailto:sahirskd@gmail.com">sahirskd@gmail.com</a>
+            <a target="blank" href="mailto:sahirskd@gmail.com">sahirskd@gmail.com</a>
           </div>
         </div>
       </header>
@@ -133,10 +137,7 @@
         <hr class="line" />
         <div class="description">
           <p>
-            I have experience in developing functional web application using
-            JavaScript/jquery, XML, HTML, CSS. I wish to join an organization
-            where I can use my coding and organizational skills to grow the
-            company.
+            Experienced React.js developer having good programming and problem-solving skills. Good knowledge of HTML, CSS, JavaScript, and Node.js, and converting web applications into PWAs and TWAs.
           </p>
         </div>
       </div>
@@ -160,15 +161,15 @@
         <hr class="line" />
         <div class="description">
           <ul class="list">
-            <li class="items"><span>HTML</span></li>
-            <li class="items"><span>CSS</span></li>
-            <li class="items"><span>JavaScript/jquery</span></li>
-            <li class="items"><span>WordPress</span></li>
-            <li class="items"><span>Bootstrap</span></li>
-            <li class="items"><span>Figma</span></li>
-            <li class="items"><span>SSG</span></li>
+              <li class="items"><span>JavaScript/jquery</span></li>
+              <li class="items"><span>React.js</span></li>
+              <li class="items"><span>CSS</span></li>
+              <li class="items"><span>Bootstrap</span></li>
+              <li class="items"><span>Node.js</span></li>
+              <li class="items"><span>Redux</span></li>
+              <li class="items"><span>HTML</span></li>
             <li class="items"><span>PWA</span></li>
-            <li><span>VS Code</span></li>
+            <li class="items"><span>Photoshop</span></li>
           </ul>
         </div>
       </div>
@@ -177,24 +178,41 @@
         <h3 class="summaryHeading">EXPERIENCE</h3>
         <hr class="line" />
         <div class="siteName">
+            <h4>Edunext Technologies</h4>
+            <a target="blank" href="https://www.edunexttechnologies.com/"><h5>EdunextTechnologies.com</h5></a>
+          </div>
+          <div class="description">
+            <ul class="firstD">
+              <li>
+                Developed web applications using <b>React.js</b>, <b>JavaScript</b>, jquery, HTML, and CSS integrated with <b>backend APIs</b>.
+              </li>
+              <li class="webDescription">
+                To give a native app-like experience, developed <b>PWAs</b> along with TWAs so that users can install our web applications on their devices along with <b>Push notification services</b>.
+              </li>
+              <li class="webDescription">
+                Developed a fully custom and <b>dynamic</b> React web application for School's security guard. To help parents to register for visits, and security guard for performing check-in, checkout, and live attendance using id cards.
+              </li>
+            </ul>
+          </div>
+        <div class="siteName">
           <h4>E-Solutions Ltd</h4>
-          <a href="https://www.e-solutionsinc.com/"><h5>E-Solutions</h5></a>
+          <a target="blank" href="https://www.e-solutionsinc.com/"><h5>E-Solutions</h5></a>
         </div>
         <div class="description">
           <ul class="firstD">
             <li>
-              Worked for it's client NIIT Ltd, in a team as a web developer to create a S.P.A e-learning
+              Worked under <b>NIIT Ltd</b>, in a team as a web developer to create a <b>S.P.A</b> e-learning
               platform for NIIT Ltd.
             </li>
             <li class="webDescription">
-              We used the technologies <b>jQuery, XML, shell,</b> and <b>HTML, and
+              We used the technologies like <b>javascript, jQuery, XML, shell,</b> and <b>HTML, and
               CSS</b> to dynamically fetch the content and provide a good user
               experience to the learner, and making the web application dynamic
-              so that the application can be manipulated using <b>XML</b>.
+              so that the application can be manipulated using XML.
             </li>
             <li class="webDescription">
-              Collaborated with the design team, operation team daily to build
-              the platform, implemented the feedbacks given by other teams.
+              Collaborated with the design team, operation team on a daily basis to build
+              the platform and implemented the feedbacks given by QC.
             </li>
           </ul>
         </div>
@@ -227,8 +245,27 @@
         <h3 class="summaryHeading">PROJECTS</h3>
         <hr class="line" />
         <div class="siteName">
+            <h4>Student Dashboard</h4>
+            <a target="blank" href="https://school.edunext2.com/Index"
+              ><h5>Student Dashboard</h5></a
+            >
+          </div>
+          <div class="description">
+            <ul class="firstD">
+              <li>
+                Designed fully functional student dashboard to fullfill all kinds of student needs related to education.
+              </li>
+              <li class="webDescription">
+             Developed the application's front-end using HTML, CSS, Jquery and bootstrap, Moment.js and some other libraries.
+              </li>
+              <li class="webDescription">
+                Integrated front-end with backend using fetch API's and the dashboard is live for more than thousands of students.
+              </li>
+            </ul>
+          </div>
+        <div class="siteName">
           <h4>Star Internationals</h4>
-          <a href="https://starinternationals.in/"
+          <a target="blank" href="https://starinternationals.in/"
             ><h5>Starinternationals.in</h5></a
           >
         </div>
@@ -252,7 +289,7 @@
 
         <div class="siteName">
           <h4>NoteApp</h4>
-          <a href="https://sahirskd1.netlify.app/index.html"
+          <a target="blank" href="https://sahirskd1.netlify.app/index.html"
             ><h5>NoteApp</h5></a
           >
         </div>
@@ -277,18 +314,16 @@
         </div>
 
         <div class="siteName">
-          <h4>Vyapar</h4>
-          <a href="https://vyapar.netlify.app/"><h5>Vyapar</h5></a>
+          <h4>Landing Page</h4>
+          <a target="blank" href="https://codepen.io/sahirskd/pen/RwVZdGz"><h5>LINK</h5></a>
         </div>
         <div class="description">
           <ul class="firstD">
             <li>
-              Developed the digital marketing company website using
-              <b>Bootstrap CSS</b> framework and jQuery.
+              Converted the PSD design into HTML, CSS without using any framework and made it fully responsive for mobile devices.
             </li>
             <li class="webDescription">
-              Made it <b>installable</b> on every device using PWA technology
-              and accessible even when the user is offline
+              Designed user interactive elements to grab users attention using transitions, animations and videos.
             </li>
           </ul>
         </div>
@@ -300,7 +335,7 @@
         <div class="description">
           <ul>
             <li>Persuing BCA from Indira Gandhi National Open University</li>
-            <li>Passed 12th from CBSE board</li>
+            <li>Passed 12th from CBSE board with 3rd rank in the school</li>
             <li>Passed 10th with 2nd position in the school from CBSE board</li>
             <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
           </ul>
@@ -313,22 +348,27 @@
         <div class="description">
           <ul class="list">
             <li class="items">
-              <a href="https://sahirskd.netlify.app"><span>sahirskd.netlify.app</span></a>
+              <a target="blank" href="https://sahirskd.netlify.app"><span>sahirskd.netlify.app</span></a>
             </li>
             <li class="items">
-              <a href="https://github.com/sahirskd"><span>GitHub</span></a>
+              <a target="blank" href="https://github.com/sahirskd"><span>GitHub</span></a>
             </li>
 
             <li class="items">
-              <a href="https://www.instagram.com/sahirskd/"
+              <a target="blank" href="https://www.instagram.com/sahirskd/"
                 ><span>Instagram</span></a
               >
             </li>
             <li class="items">
-              <a href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
+              <a target="blank" href="https://www.linkedin.com/in/sahir-khan-8b38aa193/"
                 ><span>LinkedIn</span></a
               >
             </li>
+            <li class="items">
+                <a target="blank" href="https://www.freecodecamp.org/certification/sahirskd/responsive-web-design"
+                  ><span>FreeCodeCamp</span></a
+                >
+              </li>
           </ul>
         </div>
         <!--         <span id="madeby">MADE BY SAHIR USING HTML</span> -->
