--- a/asset/resume.html
+++ b/asset/resume.html
@@ -142,32 +142,19 @@
         </div>
       </div>
 
-      <div class="summary">
-        <h3 class="summaryHeading">Personal Details</h3>
-        <hr class="line" />
-        <div class="description">
-          <ul>
-            <li><b>Date of Birth:</b> 10th Aug 2003</li>
-            <li><b>Father's Name:</b> Md. Israr khan</li>
-            <li>
-              <b>Address:</b> WZ - 157, Rani Bagh, North-West Delhi, 110034
-            </li>
-          </ul>
-        </div>
-      </div>
 
       <div class="summary">
         <h3 class="summaryHeading">KEY SKILLS</h3>
         <hr class="line" />
         <div class="description">
           <ul class="list">
-              <li class="items"><span>JavaScript/jquery</span></li>
               <li class="items"><span>React.js</span></li>
-              <li class="items"><span>CSS</span></li>
+              <li class="items"><span>Redux</span></li>
+              <li class="items"><span>JavaScript/jquery</span></li>
               <li class="items"><span>Bootstrap</span></li>
               <li class="items"><span>Node.js</span></li>
-              <li class="items"><span>Redux</span></li>
               <li class="items"><span>HTML</span></li>
+              <li class="items"><span>CSS</span></li>
             <li class="items"><span>PWA</span></li>
             <li class="items"><span>Photoshop</span></li>
           </ul>
@@ -320,10 +307,10 @@
         <div class="description">
           <ul class="firstD">
             <li>
-              Converted the PSD design into HTML, CSS without using any framework and made it fully responsive for mobile devices.
+                Converted the PSD design into HTML, CSS without using any framework and made it fully responsive for mobile and i-pad compatible devices.
             </li>
             <li class="webDescription">
-              Designed user interactive elements to grab users attention using transitions, animations and videos.
+                Designed user interactive elements to grab users' attention using transitions, animations, and videos.
             </li>
           </ul>
         </div>
@@ -335,15 +322,30 @@
         <div class="description">
           <ul>
             <li>Persuing BCA from Indira Gandhi National Open University</li>
-            <li>Passed 12th from CBSE board with 3rd rank in the school</li>
-            <li>Passed 10th with 2nd position in the school from CBSE board</li>
+            <li>Passed 12th with () from CBSE board with 3rd rank in the school</li>
+            <li>Passed 10th with (90.1%) 2nd position in the school from CBSE board</li>
             <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
           </ul>
         </div>
       </div>
 
+      
       <div class="summary">
-        <h3 class="summaryHeading">REFERENCE</h3>
+        <h3 class="summaryHeading">PERSONAL DETAILS</h3>
+        <hr class="line" />
+        <div class="description">
+          <ul>
+            <li><b>Date of Birth:</b> 10th Aug 2003</li>
+            <li><b>Father's Name:</b> Md. Israr khan</li>
+            <li>
+              <b>Address:</b> WZ - 157, Rani Bagh, North-West Delhi, 110034
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="summary">
+        <h3 class="summaryHeading">WORK AND SOCIAL PROFILES</h3>
         <hr class="line" />
         <div class="description">
           <ul class="list">
