--- a/asset/resume.html
+++ b/asset/resume.html
@@ -322,7 +322,7 @@
         <div class="description">
           <ul>
             <li>Persuing BCA from Indira Gandhi National Open University</li>
-            <li>Passed 12th with () from CBSE board with 3rd rank in the school</li>
+            <li>Passed 12th with (80.8%) from CBSE board with 3rd rank in the school</li>
             <li>Passed 10th with (90.1%) 2nd position in the school from CBSE board</li>
             <!--<li class="webDescription">Passed 12 with 89% from CBSE board</li>-->
           </ul>
